After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766045 - Previous search string not set correctly
Previous search string not set correctly
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
3.21.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-06 08:03 UTC by Fangwen Yu
Modified: 2016-05-06 09:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
editor-frame: set previous search string properly (1.02 KB, patch)
2016-05-06 08:10 UTC, Fangwen Yu
committed Details | Review

Description Fangwen Yu 2016-05-06 08:03:24 UTC
This bug only affects Builder and Emacs keybinding.

How to reproduce (in Builder keybinding):

1) Open a new file, type a few "hello", Hit Ctrl+F and search for "hello".

2) Hit Enter to dismiss the search entry, then Esc to clear the search.

3) Hit Ctrl+F again, the search entry is empty (should be "hello").
Comment 1 Fangwen Yu 2016-05-06 08:10:13 UTC
Created attachment 327366 [details] [review]
editor-frame: set previous search string properly
Comment 2 Christian Hergert 2016-05-06 09:09:10 UTC
Attachment 327366 [details] pushed as d15f8db - editor-frame: set previous search string properly