editor-frame: set previous search string properly

https://bugzilla.gnome.org/show_bug.cgi?id=766045